--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@
       font-size: 14px;
       opacity: 0.5;
     }
+
+    /* Critical CSS - Above the fold */
+    #root {
+      min-height: 100vh;
+      background: #0b0f14;
+      color: #fff;
+    }
   </style>
+
+  <!-- Prefetch critical routes -->
+  <link rel="prefetch" href="/assets/vendor" as="script" />
 </head>
 
 <body>
@@ -79,7 +89,6 @@
       }
     })(window.location);
   </script>
-  <script>document.body.dataset.inline = 'ok';</script>
   <div id="root">
     <div class="loading-fallback">
       <div>Loading On Tour App...</div>
